--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
   "devDependencies": {
     "eslint": "^7.10.0",
     "prettier": "^2.1.2"
+  },
+  "dependencies": {
+    "axios": "^0.20.0",
+    "chalk": "^4.1.0",
+    "readline-sync": "^1.4.10"
   }
 }
