--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "chalk": "^4.1.0",
+    "express": "^4.17.1",
     "readline-sync": "^1.4.10"
   }
 }
